add user docs
