# internal/adapters/controller/api/v1/user/logout.go
@@ -10,6 +10,18 @@ import (
 	"net/http"
 )
 
+// Logout User logout
+//
+// @Summary Logout user
+// @Tags user
+// @Accept json
+// @Produce json
+// @Security CookieAuth
+// @Success 204
+// @Header 204 {string} Set-Cookie "user_auth_access_token=; expires=Thu, 01 Jan 1970 00:00:00 GMT; Path=/; HttpOnly"
+// @Header 204 {string} Set-Cookie "user_auth_refresh_token=; expires=Thu, 01 Jan 1970 00:00:00 GMT; Path=/; HttpOnly"
+// @Failure 400 {object} dto.HTTPStatus
+// @Router /api/v1/user/logout [post]
 func (h *handler) Logout(c echo.Context) error {
 	var req dto.LogoutRequest
 	userID, _ := c.Get("user_id").(uuid.UUID)
